--- a/khoBlog/templates/tailwind/status_dot.html
+++ b/khoBlog/templates/tailwind/status_dot.html
@@ -5,7 +5,7 @@
     {% if object.pub_date %}
       {% if object.was_published_recently %}
         <div class="inline-flex">
-          <span class="h-1.5 w-1.5 rounded-full bg-green-400" aria-hidden="true"></span>
+          <span class="h-1.5 w-1.5 rounded-full bg-tradewind-400" aria-hidden="true"></span>
         </div>
       {% elif object.is_scheduled %}
         <div class="inline-flex">
@@ -20,7 +20,7 @@
   {% endif %}
 {% else %}
   <div class="inline-flex">
-    <span class="h-1.5 w-1.5 rounded-full bg-red-500" aria-hidden="true"></span>
+    <span class="h-1.5 w-1.5 rounded-full bg-flamingo-500" aria-hidden="true"></span>
   </div>
 {% endif %}
 {% if object.is_content_outdated_date %}
