--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -39,7 +39,7 @@
                     <td class="py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
                     <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.title }}</td>
                     <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
-                    <td class="todo_element {% if task.status == "complete" %}text-green-700 dark:text-green-500{% elif task.status == "wontfix" or task.status == "impossible" %}text-flamingo-600{% else %}text-gray-500 dark:text-jumbo-50{% endif %}">{{ task.get_status_display }}</td>
+                    <td class="todo_element {% if task.status == "complete" %}text-tradewind-700 dark:text-tradewind-500{% elif task.status == "wontfix" or task.status == "impossible" %}text-flamingo-600{% else %}text-gray-500 dark:text-jumbo-50{% endif %}">{{ task.get_status_display }}</td>
                     <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.completed_date|default:'' }}</td>
                     {% if user.is_superuser %}
                       <td class="px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
