--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -246,7 +246,8 @@
                 @apply border-l-8 border-amber-800 bg-amber-200 text-amber-700;
             }
 
-            & a {
+            & a,
+            li::marker {
                 @apply text-inherit;
             }
         }
