--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -175,6 +175,10 @@
 
         colorScheme()
       }
+
+      const navigationHeight = document.querySelector('#navbar').offsetHeight;
+
+      document.documentElement.style.setProperty('--scroll-padding', navigationHeight - 1 + "px");
     </script>
 
     {% if not debug_flag %}
