--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -65,9 +65,7 @@
             {% endif %}
           </p>
         </div>
-        {% if user.is_superuser %}
-          {% sb object %}
-        {% endif %}
+        {% sb object user=request.user %}
       </div>
       <div class="py-3 xl:pt-6 xl:pb-0">
         <h2 class="sr-only">Content</h2>
