--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -7,7 +7,7 @@
         {{ title }}
       </h2>
       {% if user.is_superuser and parent_object %}
-        {% sb parent_object %}
+        {% sb parent_object user=request.user %}
       {% endif %}
     </div>
     <div class="block sm:flex gap-2 mt-3 sm:mt-4">
