added link to parents in projects link to the respective main list in Pages and Projects

--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -19,7 +19,7 @@
           <div>
             <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ page.title }}</span>
             <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-500">
-              Page <span class="font-bold">#{{ page.pk }}</span>
+              <a href="{% url 'pages:index' %}" class="hover:underline">Page</a> <span class="font-bold">#{{ page.pk }}</span>
             </p>
           </div>
           {% sb page user=request.user %}
