Updated reqs Changed the "new post" color to a greener green Fixed the rounded in login and signup forms for good

--- a/khoBlog/templates/authentication/includes/login_form.html
+++ b/khoBlog/templates/authentication/includes/login_form.html
@@ -12,8 +12,8 @@
     </p>
   </div>
 
-  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md rounded-2xl">
-    <div class="bg-gray-50 dark:bg-jumbo-900 py-8 px-4 border dark:border-jumbo-800/50 shadow-lg sm:rounded-2xl sm:px-10">
+  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="bg-gray-50 dark:bg-jumbo-900 py-8 px-4 border dark:border-jumbo-800/50 shadow-lg rounded-2xl sm:px-10">
       <section class="mb-6">
         <p class="text-sm font-medium text-gray-500 dark:text-jumbo-300">Sign in with</p>
 
