--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -1,4 +1,4 @@
-{% load static links_menu menu_footer_set weblog %}
+{% load static links_menu menu_footer_set changelog %}
 
 <div id="navbar" class="sticky top-0 z-[9999] bg-gray-50 dark:bg-jumbo-900">
   <div class="relative" x-data="{ open: false, focus: false }" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
