--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -290,12 +290,12 @@
                 @apply ml-2;
             }
 
-            & * {
-                @apply rounded-none p-0;
+            & td {
+                @apply p-0;
             }
 
             & pre {
-                @apply m-0 p-4;
+                @apply rounded-none m-0 p-4;
             }
 
             & .code pre {
