--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -283,6 +283,10 @@
             @apply my-0 inline-block;
         }
 
+        .highlight {
+            @apply rounded-xl;
+        }
+
         .highlighttable {
             @apply block resize-x max-w-full rounded-xl bg-[#002b36] text-[#839496] overflow-x-auto;
 
