--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -32,7 +32,7 @@
                 Admin
               </a>
 
-              <a href="https://eu.pythonanywhere.com" class="text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline" target="_blank">
+              <a href="https://eu.pythonanywhere.com" class="text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
                 Host
               </a>
             {% endif %}
