--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -8,7 +8,7 @@
 {% block additional_css %}
   {% compress css %}
   <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.default.css' %}">
-  <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}" media="screen">
+  <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
   {% endcompress css %}
 {% endblock additional_css %}
 
