reqs (tailwind) update in profile (add Personal info tab with name and email) fix email link in profile points to admin even for users connections and email forms updated

--- a/khoBlog/templates/account/connections.html
+++ b/khoBlog/templates/account/connections.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   {% if form.accounts %}
-    <p>You can sign in to your account using any of the following third party accounts:</p>
+    <div class="text-xl">You can sign in to your account using any of the following third party accounts:</div>
 
     <form method="post" action="{% url 'socialaccount_connections' %}">
       {% csrf_token %}
@@ -15,37 +15,29 @@
 
         {% for base_account in form.accounts %}
           {% with base_account.get_provider_account as account %}
-          <div>
-            <label for="id_account_{{ base_account.id }}">
-              <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-              <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{ account.get_brand.name }}</span>
-              {{ account }}
-            </label>
-          </div>
+            <div class="mb-1">
+              <label for="id_account_{{ base_account.id }}">
+                <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
+                <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{ account.get_brand.name }}</span>
+                {{ account }}
+              </label>
+            </div>
           {% endwith %}
         {% endfor %}
 
-        <div>
-          <button type="submit" class="btn btn-secondary mt-2">Remove</button>
-        </div>
-
+        <button type="submit" class="kho-button-forms kho-button-submit-delete">Remove</button>
       </fieldset>
-
     </form>
 
   {% else %}
     <p>You currently have no social network accounts connected to this account.</p>
   {% endif %}
 
-  <hr/>
-
-  <h2>Add a 3rd Party Account</h2>
+  <div class="text-xl mt-2">Add a 3rd Party Account</div>
 
   {% include "socialaccount/snippets/login_extra.html" %}
-  <a href="{% provider_login_url 'google' process='connect' next='/' %}">Connect a Gmail Account</a>
-  <br>
-  <a href="{% provider_login_url 'discord' process='connect' next='/'  %}">Connect a Discord Account</a>
-  <br/>
-  <a href="{% provider_login_url 'github' process='connect' next='/'  %}">Connect a Github Account</a>
+  <p><a class="hover:underline no-underline" href="{% provider_login_url 'google' process='connect' next='/' %}">Connect a Gmail Account</a></p>
+  <p><a class="hover:underline no-underline" href="{% provider_login_url 'discord' process='connect' next='/'  %}">Connect a Discord Account</a></p>
+  <p><a class="hover:underline no-underline" href="{% provider_login_url 'github' process='connect' next='/'  %}">Connect a Github Account</a></p>
 
 {% endblock content %}
