--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -53,6 +53,12 @@
                 Profile
               </button>
 
+              {% if object == user or user.is_superuser %}
+                <button :class="{ 'profile_active_tab': tab === 'personal' }" x-on:click.prevent="tab = 'personal'" class="profile_tab">
+                  Personal info
+                </button>
+              {% endif %}
+
               {% get_social_accounts object as accounts %}
               {% if accounts.github and object.display_github %}
                 <button :class="{ 'profile_active_tab': tab === 'github' }" x-on:click.prevent="tab = 'github'" class="profile_tab">
@@ -67,26 +73,6 @@
       <!-- Description list -->
       <section x-show="tab === 'description'" class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
         <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
-          {% if object.pk == user.pk or user.is_superuser %}
-            <div class="sm:col-span-1">
-              <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100">
-                Email
-              </dt>
-              <dd class="mt-1 text-sm text-gray-900 dark:text-jumbo-300">
-                {% for emailaddress in object.emailaddress_set.all %}
-                  <a href="{% url 'admin:account_emailaddress_change' object_id=emailaddress.id %}">{{ emailaddress }}
-                    -
-                    {% if emailaddress.verified %}
-                      <span>Verified</span>
-                    {% else %}
-                      <span>Unverified</span>
-                    {% endif %}
-                  </a>
-                {% endfor %}
-              </dd>
-            </div>
-          {% endif %}
-
           <div class="sm:col-span-1">
             <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100">
               Title
@@ -120,6 +106,44 @@
           </div>
         </dl>
       </section>
+
+      {% if object == user or user.is_superuser %}
+        <section x-show="tab === 'personal'" class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+          <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+            <div class="sm:col-span-1">
+              <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100">
+                Name
+              </dt>
+              <dd class="mt-1 text-sm text-gray-900 dark:text-jumbo-300">
+                <p>{{ object.get_full_name }}</p>
+              </dd>
+            </div>
+
+            <div class="sm:col-span-1">
+              <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100">
+                Primary email
+              </dt>
+              <dd class="mt-1 text-sm text-gray-900 dark:text-jumbo-300">
+                {% for emailaddress in object.emailaddress_set.all %}
+                  {% if user.is_superuser %}
+                    <a class="underline hover:no-underline" href="{% url 'admin:account_emailaddress_change' object_id=emailaddress.id %}">
+                  {% else %}
+                    <a class="underline hover:no-underline" href="{% url 'accounts:email' %}">
+                  {% endif %}
+                    {{ emailaddress }}
+                    -
+                    {% if emailaddress.verified %}
+                      <span>Verified</span>
+                    {% else %}
+                      <span>Unverified</span>
+                    {% endif %}
+                  </a>
+                {% endfor %}
+              </dd>
+            </div>
+          </dl>
+        </section>
+      {% endif %}
 
       {% if accounts.github and object.display_github %}
         <section x-show="tab === 'github'">
