--- a/khoBlog/templates/tailwind/changelog.html
+++ b/khoBlog/templates/tailwind/changelog.html
@@ -2,7 +2,7 @@
 
 <section class="flow-root mt-2">
   <ul role="list">
-    {% for entry in entries %}
+    {% for object in objects %}
       <li>
         <div class="relative pb-4">
           <span class="absolute top-5 left-5 -ml-px h-full w-0.5 bg-gray-200 dark:bg-jumbo-700" aria-hidden="true"></span>
@@ -18,12 +18,12 @@
             </div>
             <div class="min-w-0 flex-1 py-1.5">
               <div class="text-sm">
-                <div class="whitespace-nowrap">{{ entry.pub_date|naturaltime }}</div>
+                <div class="whitespace-nowrap">{{ object.pub_date|naturaltime }}</div>
                 <div class="truncate">
-                  <a href="{{ entry.get_absolute_url }}" class="font-medium hover:underline">{{ entry.title }}</a>
+                  <a href="{{ object.get_absolute_url }}" class="font-medium hover:underline">{{ object.title }}</a>
                 </div>
                 <div>
-                  {{ entry.description }}
+                  {{ object.description }}
                 </div>
                 {% if forloop.last %}
                   <div class="relative">
